get_filename_component(MODULE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
message(STATUS      "${MODULE_NAME} tasks")
set(exec_func_tests "${MODULE_NAME}_func_tests")
set(exec_perf_tests "${MODULE_NAME}_perf_tests")
set(exec_func_lib   "${MODULE_NAME}_module_lib")
set(project_suffix  "_${MODULE_NAME}")

if (USE_FUNC_TESTS)
  list(APPEND LIST_OF_EXEC_TESTS "${exec_func_tests}")
endif (USE_FUNC_TESTS)
if (USE_PERF_TESTS)
  list(APPEND LIST_OF_EXEC_TESTS "${exec_perf_tests}")
endif (USE_PERF_TESTS)

if ( USE_SEQ AND (USE_FUNC_TESTS OR USE_PERF_TESTS))
  SUBDIRLIST(subdirs ${CMAKE_CURRENT_SOURCE_DIR})
  foreach(subd ${subdirs})
    get_filename_component(PROJECT_ID ${subd} NAME)
    set(PATH_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/${subd}")
    message(STATUS "-- ${PROJECT_ID}${project_suffix}")

    file(GLOB_RECURSE TMP_LIB_SOURCE_FILES ${PATH_PREFIX}/include/* ${PATH_PREFIX}/src/*)
    list(APPEND LIB_SOURCE_FILES ${TMP_LIB_SOURCE_FILES})

    file(GLOB SRC_RES ${PATH_PREFIX}/src/*)
    list(APPEND SRC_RES ${TMP_SRC_RES})

    if (USE_FUNC_TESTS)
      file(GLOB_RECURSE TMP_FUNC_TESTS_SOURCE_FILES "${PATH_PREFIX}/func_tests/*")
      list(APPEND FUNC_TESTS_SOURCE_FILES ${TMP_FUNC_TESTS_SOURCE_FILES})
    endif (USE_FUNC_TESTS)
    if (USE_PERF_TESTS)
      file(GLOB_RECURSE TMP_PERF_TESTS_SOURCE_FILES "${PATH_PREFIX}/perf_tests/*")
      list(APPEND PERF_TESTS_SOURCE_FILES ${TMP_PERF_TESTS_SOURCE_FILES})
    endif (USE_PERF_TESTS)
  endforeach()

  project(${exec_func_lib})
  list(LENGTH SRC_RES RES_LEN)
  if(RES_LEN EQUAL 0)
    add_library(${exec_func_lib} INTERFACE ${LIB_SOURCE_FILES})
  else()
    add_library(${exec_func_lib} STATIC ${LIB_SOURCE_FILES})
  endif()
  set_target_properties(${exec_func_lib} PROPERTIES LINKER_LANGUAGE CXX)

  if (USE_FUNC_TESTS)
    add_executable(${exec_func_tests} ${FUNC_TESTS_SOURCE_FILES})
  endif (USE_FUNC_TESTS)
  if (USE_PERF_TESTS)
    add_executable(${exec_perf_tests} ${PERF_TESTS_SOURCE_FILES})
  endif (USE_PERF_TESTS)

  foreach (EXEC_FUNC ${LIST_OF_EXEC_TESTS})
    target_link_libraries(${EXEC_FUNC} PUBLIC core_module_lib)

    add_dependencies(${EXEC_FUNC} ppc_googletest)
    target_link_directories(${EXEC_FUNC} PUBLIC ${CMAKE_BINARY_DIR}/ppc_googletest/install/lib)
    target_link_libraries(${EXEC_FUNC} PUBLIC gtest gtest_main)
    target_link_libraries(${EXEC_FUNC} PUBLIC ${exec_func_lib})

    enable_testing()
    add_test(NAME ${EXEC_FUNC} COMMAND ${EXEC_FUNC})
  endforeach ()

  if (USE_FUNC_TESTS)
    CPPCHECK_TEST("${exec_func_tests}" "${FUNC_TESTS_SOURCE_FILES}")
  endif (USE_FUNC_TESTS)
  if (USE_PERF_TESTS)
    CPPCHECK_TEST("${exec_perf_tests}" "${PERF_TESTS_SOURCE_FILES}")
  endif (USE_PERF_TESTS)
else()
  message(WARNING "${exec_func_lib} not build!")
endif()
