set(PROJECT_NAME "test_omp")
enable_testing()

if ( USE_OMP )
    project( ${PROJECT_NAME} )
    message( STATUS "-- " ${PROJECT_NAME} )
    file(GLOB_RECURSE header_files "*.h")
    file(GLOB_RECURSE source_files "*.cpp")
    add_library(package_lib ${header_files} ${source_files})
    add_executable(${PROJECT_NAME} main.cpp)
    target_link_libraries(${PROJECT_NAME} package_lib)
    if (UNIX)
        target_link_libraries(${PROJECT_NAME} gtest ${CMAKE_THREAD_LIBS_INIT} pthread)
    endif (UNIX)
    target_link_libraries(${PROJECT_NAME} gtest)
else( USE_OMP )
    message( STATUS "-- ${PROJECT_NAME} - NOT BUILD!"  )
endif( USE_OMP )
