get_filename_component(ProjectId ${CMAKE_CURRENT_SOURCE_DIR} NAME)
enable_testing()

if ( USE_OMP )
    project( ${ProjectId} )
    message( STATUS "-- " ${ProjectId} )
    file(GLOB_RECURSE header_files "*.h")
    file(GLOB_RECURSE source_files "*.cpp")
    set(PACK_LIB "${ProjectId}_lib")
    add_library(${PACK_LIB} ${header_files} ${source_files})
    add_executable(${ProjectId} main.cpp)
    target_link_libraries(${ProjectId} ${PACK_LIB})
    if (UNIX)
        target_link_libraries(${ProjectId} gtest ${CMAKE_THREAD_LIBS_INIT} pthread)
    endif (UNIX)
    target_link_libraries(${ProjectId} gtest)
else( USE_OMP )
    message( STATUS "-- ${ProjectId} - NOT BUILD!"  )
endif( USE_OMP )
